# rtx

./: CMakeLists.txt  build.sh  fragment.glsl  main.cpp  vertex.glsl
.cache/clangd/index/: glew.h.CF26DC66FA0D3E72.idx  glfw3.h.DD7D7DCEB5E61DA4.idx  main.cpp.60B21306034371EA.idx
